changes to main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="heading">Go Snow Glencoe</string>
     <string name="welcome">In the heart of the beautiful Scottish Highlands, Glencoe Mountain
                         resort is a place to have lots of fun during the snowy season</string>
+
+    <string name="country">Scotland</string>
 </resources>
