--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="signed_out">Signed Out</string>
     <string name="auth_failed">Authentication Failed</string>
 
+    <string name="banner_ad_unit_id">ca-app-pub-9185610794869190/2251858395</string>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
